--- a/src/main/resources/templates/allStudent.html
+++ b/src/main/resources/templates/allStudent.html
@@ -14,8 +14,8 @@
 
 <!-- Custom fonts for this template -->
 <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
-<link th:href="@{/https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i}" rel="stylesheet">
-
+<!-- <link th:href="@{/https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i}" rel="stylesheet">
+ -->
 <!-- Custom styles for this template -->
 <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
 
@@ -259,7 +259,7 @@
 										</tr>
 									</tfoot>
 									<tbody>
-										<tr th:each="student,num : ${students}">
+										<!-- <tr th:each="student,num : ${students}">
 											<td th:text="${num.count}"></td>
 											<td th:text="${student.firstName}"></td>
 											<td th:text="${student.lastName}"></td>
@@ -273,7 +273,7 @@
 											</a> &nbsp <a th:href="@{/deleteStudent(id=${student.id})}" class="btn btn-danger btn-icon-split" onClick="return confirm('Are you absolutely sure want to delete?')"> <span class="icon text-white-50"> <i class="fas fa-trash"></i>
 												</span> <span class="text">Delete </span>
 											</a></td>
-										</tr>
+										</tr> -->
 									</tbody>
 								</table>
 							</div>
@@ -341,12 +341,11 @@
 
 	<!-- Page level custom scripts -->
 	<script src="js/demo/datatables-demo.js"></script>
-	.
-	<script>
-		var msg = "test";
-		document.getElementById("delMsg").value = msg;
-	</script>
-
+	
+	
+	<script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+	<script type="text/javascript" th:src="@{/js/jquery.dataTables.min.js}"></script>
+	<script type="text/javascript" th:src="@{/js/postrequest.js}"></script>
 </body>
 
 </html>
