--- a/src/main/resources/templates/todolist.html
+++ b/src/main/resources/templates/todolist.html
@@ -15,8 +15,7 @@
 		<div class="task-list task-container" id="pending">
 			<h3>Pending</h3>
 			<div class="todo-task ui-draggable" id="task-item" style="position: relative;">
-				<div class="task-header">
-				</div>
+				<div class="task-header"></div>
 				<div class="task-date"></div>
 				<div class="task-description"></div>
 			</div>
@@ -32,10 +31,10 @@
 
 		<div class="task-list">
 			<h3>Add a task</h3>
-			<form id="addTaskForm">
-				<input type="text" name="title" placeholder="Title" />
-				<textarea name="description" placeholder="Description"></textarea>
-				<input type="text" name="date" id="date" placeholder="Due Date (dd/mm/yyyy)" /> <input type="button" id="addTask" class="btn btn-primary" value="Add Task" />
+			<form id="todo-form">
+				<input type="text" placeholder="Title" />
+				<textarea placeholder="Description"></textarea>
+				<input type="text" id="datepicker" placeholder="Due Date (dd/mm/yyyy)" /> <input type="button" class="btn btn-primary" value="Add Task" onclick="todo.add();" />
 			</form>
 
 			<input type="button" class="btn btn-primary" value="Clear Data" onclick="todo.clear();" />
@@ -47,18 +46,18 @@
 		<script type="text/javascript" src="lib/jQuery/jquery.min.js"></script>
 		<script type="text/javascript" src="lib/Bootstrap/bootstrap.min.js"></script>
 		<script type="text/javascript" src="lib/jQuery/jquery.ui.min.js"></script>
-		<script type="text/javascript" src="assets/todo.js"></script>
+		<script type="text/javascript" src="assets/todolist.js"></script>
 
 		<script type="text/javascript">
-			$("#date").datepicker();
-			$("#date").datepicker("option", "dateFormat", "dd/mm/yy");
+			$("#datepicker").datepicker();
+			$("#datepicker").datepicker("option", "dateFormat", "dd/mm/yy");
 
 			$(".task-container").droppable();
 			$(".todo-task").draggable({
 				revert : "valid",
 				revertDuration : 200
 			});
-			//todo.init();
+			todo.init();
 		</script>
 
 	</div>
